<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Keep Safe 911</string>
    <string name="email_text" tools:ignore="MissingTranslation">Email</string>
    <string name="referral_text" tools:ignore="MissingTranslation">Referral Code</string>
    <string name="promotion_text" tools:ignore="MissingTranslation">Promotion Code</string>
    <string name="password_text" tools:ignore="MissingTranslation">Password</string>
    <string name="family_name_text" tools:ignore="MissingTranslation">Enter your Family Name</string>
    <string name="sign_in" tools:ignore="MissingTranslation">Sign In</string>
    <string name="sign_up" tools:ignore="MissingTranslation">Sign up</string>
    <string name="add_member" tools:ignore="MissingTranslation">Add User</string>
    <string name="update_member" tools:ignore="MissingTranslation">Update User</string>
    <string name="member_list" tools:ignore="MissingTranslation">User List</string>
    <string name="members" tools:ignore="MissingTranslation">Users</string>
    <string name="search_member" tools:ignore="MissingTranslation">Search User</string>
    <string name="search_geofence_name" tools:ignore="MissingTranslation">Search Travel Alert</string>
    <string name="geofence" tools:ignore="MissingTranslation">Add Travel Alert</string>
    <string name="geofence_update" tools:ignore="MissingTranslation">Update Travel Alert</string>
    <string name="submit" tools:ignore="MissingTranslation">Submit</string>
    <string name="submitinvite" tools:ignore="MissingTranslation">Submit &amp; Invite</string>
    <string name="member_route" tools:ignore="MissingTranslation">Member Route</string>
    <string name="where_have_been" tools:ignore="MissingTranslation">Date Traveled</string>
    <string name="live_member" tools:ignore="MissingTranslation">Live User</string>
    <string name="here_iam" tools:ignore="MissingTranslation">Here I am!</string>
    <string name="rememeber_me" tools:ignore="MissingTranslation">Remember Me</string>
    <string name="forgot_password" tools:ignore="MissingTranslation">Forgot Password?</string>
    <string name="sign_up_text" tools:ignore="MissingTranslation">Don\'t have an account? Sign up</string>
    <string name="login_with_touch_id" tools:ignore="MissingTranslation">LOGIN WITH TOUCH ID</string>
    <string name="username" tools:ignore="MissingTranslation">Username</string>
    <string name="verify" tools:ignore="MissingTranslation">Verify</string>
    <string name="apply" tools:ignore="MissingTranslation">Apply</string>
    <string name="text_copy" tools:ignore="MissingTranslation">Copy</string>
    <string name="text_copied" tools:ignore="MissingTranslation">Copied</string>
    <string name="firstname" tools:ignore="MissingTranslation">First name</string>
    <string name="pay_firstname" tools:ignore="MissingTranslation">First Name</string>
    <string name="lastname" tools:ignore="MissingTranslation">Last name</string>
    <string name="pay_lastname" tools:ignore="MissingTranslation">Last Name</string>
    <string name="pho_number" tools:ignore="MissingTranslation">Phone number</string>
    <string name="c_passsword" tools:ignore="MissingTranslation">Confirm password</string>
    <string name="freq_seconds" tools:ignore="MissingTranslation">Frequency In Seconds</string>
    <string name="referral_code" tools:ignore="MissingTranslation">Referral name</string>
    <string name="logout" tools:ignore="MissingTranslation">Logout</string>
    <string name="edit_profile" tools:ignore="MissingTranslation">
        <u>Edit Profile</u>
    </string>
    <string name="forgot_password_title" tools:ignore="MissingTranslation">Forgot Password</string>
    <string name="deactivate_account" tools:ignore="MissingTranslation">Deactivate Account</string>
    <string name="title_activity_home" tools:ignore="MissingTranslation">HomeActivity</string>
    <string name="navigation_drawer_open" tools:ignore="MissingTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="MissingTranslation">Close navigation drawer</string>
    <string name="nav_header_title" tools:ignore="MissingTranslation">Android Studio</string>
    <string name="nav_header_subtitle" tools:ignore="MissingTranslation">android.studio@android.com</string>
    <string name="nav_header_desc" tools:ignore="MissingTranslation">Navigation header</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="no_internet" tools:ignore="MissingTranslation">Please check your internet connection!</string>
    <string name="blank_pass" tools:ignore="MissingTranslation">Password can not be blank.</string>
    <string name="blank_conf_pass" tools:ignore="MissingTranslation">Confirm Password can not be blank.</string>
    <string name="valid_pass" tools:ignore="MissingTranslation">Please enter valid password</string>
    <string name="pass_val" tools:ignore="MissingTranslation">Password must be 8 characters longer.</string>
    <string name="pass_common_val" tools:ignore="MissingTranslation">Password must contain special character, number and uppercase latter</string>
    <string name="val_email" tools:ignore="MissingTranslation">Please enter valid Email address.</string>
    <string name="blank_email" tools:ignore="MissingTranslation">Email address can not be blank.</string>
    <string name="blank_user" tools:ignore="MissingTranslation">Username can not be blank.</string>
    <string name="val_username" tools:ignore="MissingTranslation">Please enter valid username.</string>
    <string name="blank_first" tools:ignore="MissingTranslation">Firstname can not be blank.</string>
    <string name="blank_last" tools:ignore="MissingTranslation">Lastname can not be blank.</string>
    <string name="blank_phone" tools:ignore="MissingTranslation">Mobile number can not be blank.</string>
    <string name="blank_name" tools:ignore="MissingTranslation">Name on card can not be blank.</string>
    <string name="blank_card" tools:ignore="MissingTranslation">Card number can not be blank.</string>
    <string name="blank_month" tools:ignore="MissingTranslation">Month can not be blank.</string>
    <string name="blank_year" tools:ignore="MissingTranslation">Year can not be blank.</string>
    <string name="blank_cvv" tools:ignore="MissingTranslation">CVV code can not be blank.</string>
    <string name="match_pass" tools:ignore="MissingTranslation">Sorry! your password is not match with confirm password.</string>
    <string name="bank_recoup" tools:ignore="MissingTranslation">Cash Back Program</string>
    <string name="benefit_hub" tools:ignore="MissingTranslation">Discount &amp; Rewards</string>
    <string name="old_new_password" tools:ignore="MissingTranslation">You can not use Current Password as New Password
    </string>
    <string name="select_member_geo" tools:ignore="MissingTranslation">Please select users for Travel Alert</string>
    <string name="select_member_frequency" tools:ignore="MissingTranslation">Please select users for set Frequency</string>
    <string name="yes" tools:ignore="MissingTranslation">Yes</string>
    <string name="no" tools:ignore="MissingTranslation">No</string>
    <string name="logout_conf" tools:ignore="MissingTranslation">Logout confirmation</string>
    <string name="travel_conf" tools:ignore="MissingTranslation">Delete Travel Alert</string>
    <string name="travel_ite_conf" tools:ignore="MissingTranslation">Delete Travel Itinerary</string>
    <string name="wish_logout" tools:ignore="MissingTranslation">Do you wish to logout?</string>
    <string name="wish_alert" tools:ignore="MissingTranslation">Are you sure you want to delete this alert?</string>
    <string name="wish_travel_ite" tools:ignore="MissingTranslation">Are you sure you want to delete this travel itinerary?</string>
    <string name="default_notification_channel_id" translatable="false">
        KeepSafe911_Notification_Channel
    </string>
    <string name="locationError" tools:ignore="MissingTranslation">Location error!</string>
    <string name="locationMessage" tools:ignore="MissingTranslation">Please, Start your location service and set
        Location Mode to High accuracy.
    </string>
    <string name="delete_conf" tools:ignore="MissingTranslation">Delete User</string>
    <string name="wish_delete" tools:ignore="MissingTranslation">Are you sure want to delete this User?</string>
    <string name="phone_length" tools:ignore="MissingTranslation">Please Enter 10 digit phone number</string>
    <string name="profile" tools:ignore="MissingTranslation">Profile</string>
    <string name="app_settings" tools:ignore="MissingTranslation">App Settings</string>
    <string name="change_password" tools:ignore="MissingTranslation">Change Password</string>
    <string name="touch_id" tools:ignore="MissingTranslation">Touch ID</string>
    <string name="others" tools:ignore="MissingTranslation">Others</string>
    <string name="str_notification" tools:ignore="MissingTranslation">Notification</string>
    <string name="cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="start_date" tools:ignore="MissingTranslation">Start date</string>
    <string name="boundary" tools:ignore="MissingTranslation">Travel Alerts</string>
    <string name="reports" tools:ignore="MissingTranslation">Reports</string>
    <string name="back_home" tools:ignore="MissingTranslation">Home</string>
    <string name="name_memb_user" tools:ignore="MissingTranslation">Name:\u00A0</string>
    <string name="date_memb_start" tools:ignore="MissingTranslation">Date:\u00A0</string>
    <string name="time_difference_memb" tools:ignore="MissingTranslation">Time Difference:\u00A0</string>
    <string name="address_memb_ping" tools:ignore="MissingTranslation">Address:\u00A0</string>
    <string name="set_pay_month" tools:ignore="MissingTranslation">Set</string>
    <string name="send_email_report" tools:ignore="MissingTranslation">Send Email</string>
    <string name="view_report_report" tools:ignore="MissingTranslation">View Report</string>
    <string name="download_report_report" tools:ignore="MissingTranslation">Download Report</string>
    <string name="conf_call_911" tools:ignore="MissingTranslation">Do you want to call 911?</string>
    <string name="subscrip_cost" tools:ignore="MissingTranslation">Subscription Cost:\u00A0</string>
    <string name="subscrip_end_date" tools:ignore="MissingTranslation">Subscription End Date:\u00A0</string>
    <string name="renew_date" tools:ignore="MissingTranslation">Renewal Date</string>
    <string name="str_frequency" tools:ignore="MissingTranslation">Frequency</string>
    <string name="str_neighborhood_news" tools:ignore="MissingTranslation">News</string>
    <string name="str_place_visit" tools:ignore="MissingTranslation">Travel Itinerary</string>
    <string name="str_60_seconds" tools:ignore="MissingTranslation">60 Seconds</string>
    <string name="str_180_seconds" tools:ignore="MissingTranslation">180 Seconds</string>
    <string name="str_300_seconds" tools:ignore="MissingTranslation">300 Seconds</string>
    <string name="str_call" tools:ignore="MissingTranslation">Call</string>
    <string name="str_message" tools:ignore="MissingTranslation">Message</string>
    <string name="str_direction" tools:ignore="MissingTranslation">Direction</string>
    <string name="str_place_rate" tools:ignore="MissingTranslation">Rate Place</string>
    <string name="str_hibp" tools:ignore="MissingTranslation">Dark Web Scan</string>
    <string name="str_missing_child" translatable="false">Missing Child</string>
    <string name="str_injury_referral" translatable="false">Injury Referral</string>
    <string name="search_child" tools:ignore="MissingTranslation">Search Child</string>
    <string name="str_donation" tools:ignore="MissingTranslation">Donation</string>
</resources>