<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/underline_shape_gray"
    android:paddingTop="@dimen/gape10"
    android:paddingStart="@dimen/size20"
    android:paddingEnd="@dimen/size20"
    android:paddingBottom="@dimen/gape10"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvSubscriptionType"
        android:textSize="@dimen/textSize18"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="0.5"
            android:id="@+id/tvSubscriptionStartDate"
            android:text="@string/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="0.5"
            android:id="@+id/tvSubscriptionRenewDate"
            android:text="@string/renew_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:visibility="gone"
        android:id="@+id/tvSubscriptionEndDate"
        android:text="@string/subscrip_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/tvSubscriptionCost"
        android:text="@string/subscrip_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvSubscriptionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>