<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvCallTitle"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.FontSemiPathView"
        android:textColor="@color/Date_bg"
        android:textSize="@dimen/text_size_xl" />

    <TextView
        android:id="@+id/tvCallMessage"
        android:text="@string/conf_call_911"
        android:textSize="@dimen/textSize16"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="@dimen/gape10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCallTitle" />

    <LinearLayout
        android:paddingTop="@dimen/gape10"
        android:paddingBottom="@dimen/gape10"
        android:orientation="horizontal"
        android:layout_below="@id/tvCallMessage"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvCallCancel"
            android:layout_weight="0.48"
            android:padding="@dimen/size15"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize18"
            android:text="@string/no"
            android:textColor="@color/color_red"
            android:layout_width="0dp"
            android:background="@drawable/call_border"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="0.04"
            android:layout_width="0dp"
            android:layout_height="@dimen/size1"/>

        <TextView
            android:id="@+id/tvCallOk"
            android:layout_weight="0.48"
            android:padding="@dimen/size15"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize18"
            android:text="@string/yes"
            android:layout_width="0dp"
            android:background="@drawable/call_border"
            android:textColor="@color/caldroid_holo_blue_light"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>