<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/llbottom"
              android:paddingTop="@dimen/gape10"
              android:paddingBottom="@dimen/gape10">
    <TextView
            android:id="@+id/tvPlaceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/gape10"
            android:visibility="gone"
            android:layout_toStartOf="@id/ivSharePlace"
            android:textColor="#737373"
            android:textSize="@dimen/textSize14"/>

    <ImageView
            android:id="@+id/ivSharePlace"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:paddingStart="@dimen/gape10"
            android:paddingEnd="@dimen/gape10"
            android:src="@drawable/ic_forward"
            android:layout_alignTop="@id/tvPlaceTitle"
            android:layout_alignBottom="@id/tvPlaceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tvRatePlace"
            android:layout_below="@id/tvPlaceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/str_place_rate"
            android:padding="@dimen/gape10"
            android:textColor="#737373"
            android:textSize="@dimen/textSize20"/>

    <TextView
            android:id="@+id/tvSendReport"
            android:layout_below="@id/tvRatePlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/send_email_report"
            android:padding="@dimen/gape10"
            android:textColor="#737373"
            android:textSize="@dimen/textSize20"/>
    <TextView
            android:id="@+id/tvViewReport"
            android:layout_below="@id/tvSendReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/view_report_report"
            android:padding="@dimen/gape10"
            android:textColor="#737373"
            android:textSize="@dimen/textSize20"/>
    <TextView
            android:id="@+id/tvDownloadReport"
            android:layout_below="@id/tvViewReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/download_report_report"
            android:padding="@dimen/gape10"
            android:textColor="#737373"
            android:textSize="@dimen/textSize20"/>
    <TextView
            android:id="@+id/tvCancelReport"
            android:layout_below="@id/tvDownloadReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#737373"
            android:padding="@dimen/gape10"
            android:textSize="@dimen/textSize20"/>
</RelativeLayout>