<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/size5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/rlDTestHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size2"
        android:paddingTop="@dimen/size2"
        android:background="@color/Date_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_frequency"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize16"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAllCaps="true"/>

        <ImageView
            android:id="@+id/iv_popup_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_x_white"
            android:layout_centerVertical="true"
            android:padding="@dimen/size15"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv1Minute"
        android:layout_marginStart="@dimen/size5"
        android:layout_marginEnd="@dimen/size5"
        android:layout_marginTop="@dimen/size5"
        android:textSize="@dimen/textSize18"
        android:text="@string/str_60_seconds"
        android:background="@drawable/edittext_grey_shadow"
        app:layout_constraintTop_toBottomOf="@id/rlDTestHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv3Minute"
        android:layout_marginStart="@dimen/size5"
        android:layout_marginEnd="@dimen/size5"
        android:layout_marginTop="@dimen/size5"
        android:textSize="@dimen/textSize18"
        android:text="@string/str_180_seconds"
        android:background="@drawable/edittext_grey_shadow"
        app:layout_constraintTop_toBottomOf="@id/tv1Minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv5Minute"
        android:layout_marginStart="@dimen/size5"
        android:layout_marginEnd="@dimen/size5"
        android:layout_marginTop="@dimen/size5"
        android:textSize="@dimen/textSize18"
        android:text="@string/str_300_seconds"
        android:background="@drawable/edittext_grey_shadow"
        app:layout_constraintTop_toBottomOf="@id/tv3Minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/llOtherFrequency"
        app:layout_constraintTop_toBottomOf="@id/tv5Minute"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/size5"
        android:layout_marginEnd="@dimen/size5"
        android:layout_marginTop="@dimen/size5"
        android:background="@drawable/edittext_without_space"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvOtherMinute"
            android:padding="@dimen/gape10"
            android:text="@string/others"
            android:textSize="@dimen/textSize18"
            app:layout_constraintTop_toBottomOf="@id/rlDTestHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/gape10"
            android:layout_marginStart="@dimen/size40"
            android:layout_marginEnd="@dimen/size5"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tl_ping_admin"
            android:visibility="gone"
            android:textColorHint="@color/grayText"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackingStatus"
            style="@style/AppTheme_EditText"
            android:tooltipText="@string/freq_seconds">
            <EditText
                android:id="@+id/etPaymentFrequency"
                android:hint="@string/freq_seconds"
                android:layout_marginTop="@dimen/space_xxm"
                android:maxLength="5"
                android:inputType="number"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textColorHint="@color/grayText"
                android:background="@drawable/underline_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnFrequencySubmit"
            android:layout_gravity="end"
            android:visibility="gone"
            android:layout_marginTop="@dimen/gape10"
            android:layout_marginEnd="@dimen/size20"
            android:layout_marginBottom="@dimen/gape10"
            android:text="@string/set_pay_month"
            android:textColor="@color/caldroid_white"
            android:background="@drawable/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>